# whitted-ray-tracing-demo

./: CMakeLists.txt  README.md
src/: camera.cpp  camera.h  main.cpp  material.cpp  material.h  object.h  ppm_writer.cpp  ppm_writer.h  ray.h  renderer.cpp  renderer.h  scene.h  sphere.cpp  sphere.h
src/math/: utility.h
